# superstore-use

./: .gitignore  AGENTS.md  API_RESEARCH.md  CLAUDE.md  README.md  app.py  chat_agent.py  chat_app.py  config.toml  eval.py  eval_example.json  langgraph_research.md  login.py  main.py  modal_app.py  modal_chat_app.py  modal_tools.py  pyproject.toml
.github/workflows/: deploy-modal.yml
agent_docs/: modal.md
conf/: config.yaml
conf/browser/: headed.yaml  headless.yaml  stealth.yaml
conf/experiment/: full_comparison.yaml  quick_test.yaml  top15_x10.yaml
conf/judge/: claude.yaml  default.yaml  disabled.yaml  gpt41.yaml  llama_70b.yaml  openrouter_llama_70b.yaml
conf/llm/: anthropic_haiku_4_5.yaml  anthropic_sonnet_4_5.yaml  gpt41.yaml  gpt41_mini.yaml  gpt41_nano.yaml  gpt4o.yaml  gpt5.yaml  gpt51.yaml  gpt52.yaml  gpt5_mini.yaml  gpt5_nano.yaml  gpt_oss_120b.yaml  llama_70b.yaml  llama_8b.yaml  openrouter_deepseek_chat_v3_0324.yaml  openrouter_deepseek_r1_70b.yaml  openrouter_devstral_small.yaml  openrouter_ernie_4_5_21b_a3b_thinking.yaml  openrouter_glm_4_32b.yaml  openrouter_glm_4_7_flash.yaml  openrouter_gpt_oss_20b.yaml  openrouter_hunyuan_a13b_instruct.yaml  openrouter_jamba_mini_1_7.yaml  openrouter_llama_3_3_70b_instruct.yaml  openrouter_llama_3_3_nemotron_super_49b_v1_5.yaml  openrouter_llama_4_maverick.yaml  openrouter_llama_4_scout.yaml  openrouter_llama_70b.yaml  openrouter_llama_8b.yaml  openrouter_minimax_01.yaml  openrouter_minimax_m2.yaml  openrouter_ministral_14b_2512.yaml  openrouter_ministral_3b_2512.yaml  openrouter_ministral_8b.yaml  openrouter_ministral_8b_2512.yaml  openrouter_mistral_24b.yaml  openrouter_mistral_small_3_2_24b_instruct.yaml  openrouter_nemotron_30b.yaml  openrouter_nemotron_nano_12b_v2_vl.yaml  openrouter_qwen3_235b_a22b_2507.yaml  (+15 more)
conf/model/: anthropic.yaml  anthropic_opus.yaml  openai.yaml  openai_gpt4o.yaml  openai_o3.yaml  openrouter.yaml  openrouter_gemini.yaml  openrouter_gpt4.yaml
conf/prompt/: concise.yaml  default.yaml
core/: __init__.py  agent.py  browser.py  llm.py  prompts.py  success.py
docs/: research-orb-effects.md
local/: __init__.py  cli.py
modal/: app.py
notebooks/: eval_analysis.ipynb  multirun_analysis.ipynb
scripts/: reset_pcid_password.py  test_cart_removal.py
src/: __init__.py
src/api/: __init__.py  (+6 more)
superstore-profile/: .gitkeep
templates/: index.html
voice-app/: MULTI_BANNER_API.md  modal_app.py  package-lock.json  package.json  server.ts  tsconfig.json
(+30 files in other folders)
