[project]
name = "superstore-use"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "adjusttext>=1.3.0",
    "browser-use>=0.8",
    "flask>=3.0.0",
    "hydra-core>=1.3.0",
    "hydra-joblib-launcher>=1.2.0",
    "ipykernel>=7.1.0",
    "langchain-core>=0.3.0",
    "langchain-groq>=0.3.0",
    "langchain-openai>=1.1.6",
    "langgraph>=0.4.0",
    "matplotlib>=3.10.8",
    "modal>=1.3.0.post1",
    "pandas>=3.0.0",
    "playwright>=1.57.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "ruff>=0.13.1",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
